# AntiG_Pollen_DEK

./: .gitignore  .gitleaksignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  AI_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  INSTALL.md  INTEGRATION_p1_p2_guide.html  LICENSE  MAINTAINERS.md  NOTICE  POLLEK_AI_LOCAL_AGENT_GOVERNANCE_FULL_FLOW_IMPLEMENTATION_PLAN_2026-06-24.md  POLLEK_LOCAL_ENFORCEMENT_KIT_REPO_AUDIT_AND_IMPLEMENTATION_PLAN_2026-06-23.md  POLLEK_POLICY_DEPLOY_ROUTING_ENFORCEMENT_OBSERVE_PLAN_2026-06-24.md  POLLEN_CLOUD_DEK_SPEC.md  POLLEN_DEK_DISCOVERY_SLOW_EMPTY_FIX.md  POLLEN_DEK_EDGE_DEVELOPMENT_PLAN.md  POLLEN_DEK_LINUX_MACOS_PEP_ENFORCEMENT.md  POLLEN_DEK_LOCAL_POLICY_DEPLOYMENT_WIZARD_IMPLEMENTATION_PLAN.md  POLLEN_DEK_MACOS_DEPLOYMENT.md  POLLEN_DEK_RELEASE_READINESS_PLAN.md  POLLEN_DEK_WINDOWS_PEP_ENFORCEMENT.md  PR_CHECKLIST.md  Pollen DEK Security.docx  Pollen_Contract_Hub_Implementation_Plan.md  Pollen_DEK_Full_System_Implementation_Plan_Deep_Research_2026-06-18.md  Pollen_DEK_Repo_Release_Readiness_Implementation_Plan.md  README.md  RELEASE_NOTES_v1.0.0-beta.10.md  RELEASE_NOTES_v1.0.0-beta.5.md  SECURITY-INSIGHTS.yml  SECURITY.md  add_antigravity.js  (+51 more)
crates/acceptance-tests/: Cargo.toml
crates/acceptance-tests/scenarios/: chaos_spool.yaml  hot_reload.yaml
crates/acceptance-tests/src/: lib.rs  runner.rs  scenario.rs
crates/acceptance-tests/tests/: acceptance_tests.rs  agent_governance_flow.rs  desktop_fallback_test.rs  local_control_plane_e2e.rs  local_e2e.rs  local_environment_fixtures.rs  matrix_a_to_h.rs  matrix_a_to_k.rs  offline_mode.rs  policy_first_ux_tests.rs  soak.rs
crates/acceptance-tests/tests/fixtures/local_env/: browser_ai_extension_missing.json  cloud_offline_spool_ready.json  linux_ebpf_ready.json  linux_no_ebpf_permission.json  local_model_ollama_ready.json  (+4 more)
crates/dek-a2a-mediator/: Cargo.toml
crates/dek-a2a-mediator/src/: lib.rs
crates/dek-activation/: Cargo.toml
crates/dek-activation/src/: coordinator.rs  hydration.rs  lib.rs  lkg.rs  modes.rs  preflight.rs  signature.rs  snapshot.rs
crates/dek-bundle-sync/: Cargo.toml
crates/dek-bundle-sync/src/: keys.rs  lib.rs  merge.rs  rollback.rs  sig_test.rs
crates/dek-capability/: Cargo.toml
crates/dek-capability-registry/: Cargo.toml
crates/dek-capability-registry/src/: detect.rs  lib.rs  snapshot.rs
crates/dek-capability/examples/: demo.rs
crates/dek-capability/src/: adapter.rs  api.rs  broker.rs  ledger.rs  lib.rs  probe.rs  types.rs
crates/dek-capability/tests/: broker.rs
crates/dek-cedar/: Cargo.toml
crates/dek-cedar/benches/: authorize_bench.rs
crates/dek-cedar/src/: lib.rs
crates/dek-cli/: Cargo.toml
crates/dek-cli/src/: main.rs  panic_guard.rs
crates/dek-cli/src/proxy/: linux.rs  macos.rs  mod.rs  windows.rs
crates/dek-cli/src/service/: doctor.rs  enroll.rs  linux.rs  macos.rs  mod.rs  preflight.rs  profile.rs  revoke.rs  rollback.rs  rotate.rs  unenroll.rs  windows.rs
crates/dek-cli/tests/: enrollment_e2e.rs
crates/dek-core/: Cargo.toml
crates/dek-core/src/: api.rs  bundle_loop.rs  crypto_init.rs  ebpf.rs  ipc_client.rs  ipc_server.rs  kernel_guard.rs  keystore_migration.rs  main.rs  metrics_push.rs  network_loop.rs  panic_guard.rs  pep_warm_check.rs  probation.rs  reload_coordinator.rs  service_integration.rs  supervisor.rs  svid_renewal.rs  svid_renewal_failclosed.rs  updater.rs  watchdog.rs
crates/dek-core/tests/: e2e_mock_cloud.rs  inventory_test.rs
crates/dek-decision/: Cargo.toml
crates/dek-decision/src/: lib.rs
crates/dek-deployment-planner/: Cargo.toml
crates/dek-deployment-planner/src/: lib.rs  planner.rs  suggestion.rs
crates/dek-detection/: Cargo.toml
crates/dek-detection/examples/: gen_coverage.rs
crates/dek-detection/src/: coverage.rs  eval.rs  lib.rs  loader.rs  spec.rs
crates/dek-detection/tests/: engine.rs
crates/dek-ebpfd/: Cargo.toml  build.rs
crates/dek-ebpfd/src/: dns_cache.rs  lib.rs  map_updater.rs
crates/dek-ebpfd/tests/: map_hardening_tests.rs
crates/dek-enforcement-api/: Cargo.toml
crates/dek-enforcement-api/src/: control_method.rs  egress_observer.rs  feasibility.rs  lib.rs  os_linux.rs  os_macos.rs  os_windows.rs  planner.rs  resource_observer.rs  router.rs  security_coverage.rs  warm_check.rs
crates/dek-enforcement-api/src/backends/: mod.rs
crates/dek-enroll/: Cargo.toml
crates/dek-enroll/src/: lib.rs
crates/dek-execution-sandbox/: Cargo.toml
crates/dek-execution-sandbox/src/: lib.rs
crates/dek-fingerprint-defs/: Cargo.toml
crates/dek-fingerprint-defs/data/: baseline.v2.json  baseline.v3.json  baseline.v4.json  patch_installed_apps.js
crates/dek-fingerprint-defs/src/: lib.rs  loader.rs  merge.rs  model.rs  model_classifier.rs  store.rs  verify.rs
crates/dek-guard-pipeline/: Cargo.toml
crates/dek-guard-pipeline/src/: config.rs  event.rs  injection.rs  lib.rs  normalize.rs  output_guard.rs  pii.rs
crates/dek-guard-pipeline/tests/corpus/: guard_event.jsonl  injection.jsonl
crates/dek-load-test/: Cargo.toml
crates/dek-load-test/src/: main.rs
crates/dek-macos-nefilter/: Cargo.toml
crates/dek-macos-nefilter/PollenNetworkExtension/: README.md
crates/dek-macos-nefilter/src/: lib.rs
crates/dek-mcp-proxy/: Cargo.toml
crates/dek-mcp-proxy/src/: main.rs  reputation.rs  state.rs
crates/dek-mcp-proxy/tests/corpus/: response.jsonl
crates/dek-metrics/: Cargo.toml
crates/dek-metrics/src/: lib.rs
crates/dek-opa-wasm/: Cargo.toml
crates/dek-opa-wasm/src/: lib.rs
crates/dek-openfga/: Cargo.toml
crates/dek-openfga/src/: lib.rs
crates/dek-pdp-sdk/: Cargo.toml
crates/dek-pdp-sdk/src/: lib.rs
crates/dek-pep-router/: Cargo.toml
crates/dek-pep-router/src/: lib.rs
crates/dek-plugin-host/: Cargo.toml
crates/dek-plugin-host/src/: capabilities.rs  lib.rs  manifest.rs
crates/dek-plugin-sdk/: Cargo.toml
crates/dek-plugin-sdk/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bundle_parser.rs  fuzz_policy_preset_render.rs  normalize.rs
(+797 files in other folders)
