[workspace]
members = [
    "crates/*",
    "plugins/*"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
