[package]
name = "dek-bundle-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
dek-config = { path = "../dek-config" }
tracing.workspace = true
ed25519-dalek = "2.0"
base64 = "0.22.1"
rand = "0.10.1"
