[package]
license = "Apache-2.0"

name = "dek-cedar"
version = "0.1.0"
edition = "2021"


[dependencies]
dek-plugin-sdk = { path = "../dek-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
cedar-policy = "4.11.0"
moka = { version = "0.12", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { workspace = true, features = ["full", "rt", "macros"] }
serde_json = { workspace = true }




