[package]
name = "dek-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
dek-ipc = { path = "../dek-ipc" }
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
dek-agent-connector = { path = "../dek-agent-connector" }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde = { workspace = true, features = ["derive"] }
dek-config = { version = "0.1.0", path = "../dek-config" }
