[package]
license = "Apache-2.0"

name = "dek-decision"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
async-trait.workspace = true
futures = "0.3.32"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true

