[package]
name = "dek-deployment-planner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dek-capability-registry = { version = "1.0.0-beta.10", path = "../dek-capability-registry" }
dek-domain-schema = { version = "0.1.0", path = "../dek-domain-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true

[dev-dependencies]
chrono.workspace = true
