[package]
license = "Apache-2.0"

name = "dek-enforcement-api"
version.workspace = true
edition.workspace = true

repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dek-domain-schema = { path = "../dek-domain-schema" }
dek-agent-discovery = { path = "../dek-agent-discovery" }
anyhow.workspace = true
async-trait = "0.1"
tokio = { workspace = true, features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
