[package]
name = "dek-execution-sandbox"
version = "1.0.0-beta.10"
edition = "2021"
description = "Execution sandboxing for isolated and short-lived tool execution"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
dek-mcp-normalizer = { path = "../dek-mcp-normalizer" }
