[package]
name = "dek-guard-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
dek-plugin-sdk = { path = "../dek-plugin-sdk" }
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
