[package]
license = "Apache-2.0"

name = "dek-metrics"
version = "0.1.0"
edition = "2021"


[dependencies]
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tokio = { version = "1.0", features = ["time", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing = "0.1"
anyhow = "1.0"

