[package]
name = "dek-opa-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dek-plugin-sdk = { path = "../dek-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
wasmtime = "21.0.0"
wasmtime-wasi = "21.0.0"
bytes = "1.5"
