[package]
license = "Apache-2.0"

name = "dek-openfga"
version = "0.1.0"
edition = "2021"


[dependencies]
dek-plugin-sdk = { path = "../dek-plugin-sdk" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1.89"
reqwest = { workspace = true, features = ["json"] }
dek-config = { path = "../dek-config" }
moka = { version = "0.12", features = ["future"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "test-util"] }

[lints]
workspace = true
