[package]
name = "dek-pdp-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dek-policy-runtime = { path = "../dek-policy-runtime" }
serde_json.workspace = true
thiserror = "1.0"
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
