[package]
license = "Apache-2.0"

name = "dek-pdp-sdk"
version.workspace = true
edition.workspace = true


[dependencies]
dek-policy-runtime = { path = "../dek-policy-runtime" }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
